--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,11 @@ input {
   background-color: #76c7ad;
 }
 
+.add-form div {
+  display: flex;
+  gap: 5px;
+}
+
 .list {
   background-color: #5a3e2b;
   color: #ffebb3;
@@ -131,5 +136,62 @@ input[type="checkbox"] {
   background-color: #76c7ad;
   text-align: center;
   font-weight: 700;
-  padding: 3.2rem 0;
+  padding: 3.2rem 2.5rem;
+}
+
+/* media queries for responsive design */
+@media (max-width: 1010px) {
+  html {
+    font-size: 50.5%;
+  }
+}
+
+@media (max-width: 820px) {
+  html {
+    font-size: 40.5%;
+  }
+}
+
+@media (max-width: 650px) {
+  h1 {
+    font-size: 6rem;
+  }
+
+  .add-form {
+    flex-direction: column;
+  }
+
+  input,
+  select,
+  option,
+  button {
+    border-radius: 10rem;
+    padding: 1rem 2.3rem;
+    font-weight: 700;
+    font-size: 1.8rem;
+  }
+}
+
+@media (max-width: 500px) {
+  h1 {
+    font-size: 5.5rem;
+  }
+}
+
+@media (max-width: 420px) {
+  h1 {
+    font-size: 5rem;
+  }
+}
+
+@media (max-width: 375px) {
+  h1 {
+    font-size: 4.7rem;
+  }
+}
+
+@media (max-width: 375px) {
+  h1 {
+    font-size: 4.2rem;
+  }
 }
