--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
 
 .app {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   display: grid;
   grid-template-rows: auto auto 1fr auto;
 }
